# GIAIC_Hackathon-II_Phase-II

./: .gitignore  CLAUDE.md
.claude/agent-memory/nextjs-app-router-expert/: MEMORY.md  phase5-phase6-implementation.md
.claude/agents/: api-architecture-reviewer.md  auth-security-architect.md  nextjs-app-router-expert.md  schema-evolution-guardian.md
.claude/skills/authentication-skill/: SKILL.md
.claude/skills/backend-skill/: SKILL.md
.claude/skills/database-core/: SKILL.md
.claude/skills/frontend-skill/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_todo_table.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py
backend/app/models/: todo.py
backend/app/repositories/: todo_repository.py
backend/app/routers/: health.py  todos.py
backend/app/services/: todo_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_health.py  test_todos_crud.py
backend/tests/unit/: test_todo_service.py
frontend/: PHASE3_COMPLETE.md  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(auth)/: layout.tsx
frontend/lib/: auth-client.ts  auth.ts  logger.ts
specs/001-todo-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-frontend/: PHASE_7_8_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+38 files in other folders)
